Bug 387634 - Ftp::ftpOpenDir should not emit error unless it really failed
Summary: Ftp::ftpOpenDir should not emit error unless it really failed
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.37.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-06 07:40 UTC by Wei-Cheng Pan
Modified: 2018-02-04 17:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.43
Sentry Crash Report:


Attachments
do not emit error for "list -la" (1.26 KB, message/rfc822)
2017-12-06 07:43 UTC, Wei-Cheng Pan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wei-Cheng Pan 2017-12-06 07:40:12 UTC
"list -la" may emit error, but it should not, because we still need to try "list" afterward.

This behavior will confuse dolphin.
Comment 1 Wei-Cheng Pan 2017-12-06 07:43:21 UTC
Created attachment 109222 [details]
do not emit error for "list -la"

Proved to work on my machine.
Comment 2 Nate Graham 2017-12-06 23:13:29 UTC
What KDE Frameworks version and distro are you using?
Comment 3 Wei-Cheng Pan 2017-12-12 20:59:40 UTC
Debian Unstable, and the packaged version is 5.37.0.
Comment 4 Christoph Feck 2017-12-31 10:46:32 UTC
Please use https://phabricator.kde.org/differential/diff/create/ to submit patches.
Comment 5 Nate Graham 2018-01-03 16:13:59 UTC
Wei-Cheng, can you please submit your patch using phabricator.kde.org?
Comment 6 Wei-Cheng Pan 2018-01-05 03:51:06 UTC
Sorry for late reply. Here is the review request:
https://phabricator.kde.org/D9672
Comment 7 David Faure 2018-02-04 17:08:25 UTC
Git commit bc4ea213b1d948b921236db29e78846c34496db7 by David Faure, on behalf of Wei-Cheng Pan.
Committed on 04/02/2018 at 17:07.
Pushed by dfaure into branch 'master'.

kio_ftp: don't emit error signal before we tried all list commands.

Use a special error code to skip error reporting.

FIXED-IN: 5.43

M  +6    -2    src/ioslaves/ftp/ftp.cpp

https://commits.kde.org/kio/bc4ea213b1d948b921236db29e78846c34496db7