kio_ftp: don't emit error signal before we tried all list commands.

Use a special error code to skip error reporting.

FIXED-IN: 5.43
BUG: 387634